// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn should match snapshot 1`] = `
<ScrollableContent
  styles="width: 480px; padding-top: 128px; padding-bottom: 50px;"
>
  <CloseButton />
  <withRouter(BackButton)
    text="Back"
  />
  <div
    className="jsx-1835212979 picture"
  >
    <img
      alt="Help"
      className="jsx-1835212979"
      src="https://images.kiwi.com/smart-faq/woman-with-laptop@2x.jpg"
    />
  </div>
  <div
    className="jsx-1835212979 text"
  >
    <div
      className="jsx-1835212979 title"
    >
      <Heading
    </div>
    <Text
      align="left"
      element="p"
      italic={false}
      size="normal"
      type="secondary"
      uppercase={false}
      weight="regular"
    >
      We need you to sign in to provide you with more personalised help.
    </Text>
  </div>
  <div
    className="jsx-1835212979 buttons"
  >
    <div
      className="jsx-1835212979 googleButton"
    >
      <Button
        Facebook={true}
        Icon={[Function]}
        block={false}
        disabled={false}
        loading={false}
        onClick={[Function]}
        onlyIcon={false}
        size="normal"
        title="Continue with Google"
        type="google"
        variation="bordered"
        width={212}
      />
    </div>
    <Button
      Facebook={true}
      Icon={[Function]}
      block={false}
      className="facebook"
      disabled={false}
      loading={false}
      onClick={[Function]}
      onlyIcon={false}
      size="normal"
      title="Continue with Facebook"
      type="facebook"
      variation="filled"
      width={212}
    />
  </div>
  <div
    className="jsx-1835212979 kiwi-account"
  >
    <Link
      data-cy="link-kiwi-login"
      replace={false}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/kiwi-login"
    >
      <Typography
        type="active"
      >
        I want to use my Kiwi.com account
      </Typography>
      <img
        alt="kiwi login"
        className="jsx-1835212979 chevron"
        src="https://images.kiwi.com/smart-faq/chevron-right.png"
      />
    </Link>
  </div>
  <JSXStyle
    css="div.picture.jsx-1835212979 img.jsx-1835212979{width:203px;height:156px;}div.picture.jsx-1835212979{margin:0px 127px 0px 150px;}div.text.jsx-1835212979{margin:68px 40px 30px 40px;}.title.jsx-1835212979{margin-bottom:8px;}.googleButton.jsx-1835212979{margin-bottom:16px;}.buttons.jsx-1835212979{margin-right:134px;margin-left:134px;margin-bottom:24px;}div.kiwi-account.jsx-1835212979{margin-top:8px;text-align:center;}img.chevron.jsx-1835212979{width:8px;height:8px;margin-left:5px;object-fit:contain;}@media only screen and (min-width:320px) and (max-width:480px){.SignIn.jsx-1835212979{width:100%;padding-top:0px;}div.picture.jsx-1835212979{text-align:center;margin:75px 0px 20px 0px;}div.text.jsx-1835212979{margin:0px 16px 33px 16px;}.buttons.jsx-1835212979{display:table;margin:0 auto;}}"
    styleId="1835212979"
  />
</ScrollableContent>
`;

exports[`SignIn should match snapshot with expired message 1`] = `
<ScrollableContent
  styles="width: 480px; padding-top: 128px; padding-bottom: 50px;"
>
  <CloseButton />
  <withRouter(BackButton)
    text="Back"
  />
  <div
    className="jsx-1835212979 picture"
  >
    <img
      alt="Help"
      className="jsx-1835212979"
      src="https://images.kiwi.com/smart-faq/woman-with-laptop@2x.jpg"
    />
  </div>
  <div
    className="jsx-1835212979 text"
  >
    <div
      className="jsx-1835212979 title"
    >
      <Heading
        element="h1"
        size="large"
        weight="bold"
      >
        Sign in
      </Heading>
    </div>
    <Text
      align="left"
      element="p"
      italic={false}
      size="normal"
      type="secondary"
      uppercase={false}
      weight="regular"
    >
      We need you to sign in to provide you with more personalised help.
    </Text>
    <div
      className="jsx-2959917577 infoMessage"
    >
      <SystemMessage
        Icon={[Function]}
        type="info"
      >
        Your last session has expired. Please sign in again.
      </SystemMessage>
      <JSXStyle
        css="div.infoMessage.jsx-2959917577{margin:20px 0 0;}"
        styleId="2959917577"
      />
    </div>
  </div>
  <div
    className="jsx-1835212979 buttons"
  >
    <div
      className="jsx-1835212979 googleButton"
    >
      <Button
        Facebook={true}
        Icon={[Function]}
        block={false}
        disabled={false}
        loading={false}
        onClick={[Function]}
        onlyIcon={false}
        size="normal"
        title="Continue with Google"
        type="google"
        variation="bordered"
        width={212}
      />
    </div>
    <Button
      Facebook={true}
      Icon={[Function]}
      block={false}
      className="facebook"
      disabled={false}
      loading={false}
      onClick={[Function]}
      onlyIcon={false}
      size="normal"
      title="Continue with Facebook"
      type="facebook"
      variation="filled"
      width={212}
    />
  </div>
  <div
    className="jsx-1835212979 kiwi-account"
  >
    <Link
      data-cy="link-kiwi-login"
      replace={false}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/kiwi-login"
    >
      <Typography
        type="active"
      >
        I want to use my Kiwi.com account
      </Typography>
      <img
        alt="kiwi login"
        className="jsx-1835212979 chevron"
        src="https://images.kiwi.com/smart-faq/chevron-right.png"
      />
    </Link>
  </div>
  <JSXStyle
    css="div.picture.jsx-1835212979 img.jsx-1835212979{width:203px;height:156px;}div.picture.jsx-1835212979{margin:0px 127px 0px 150px;}div.text.jsx-1835212979{margin:68px 40px 30px 40px;}.title.jsx-1835212979{margin-bottom:8px;}.googleButton.jsx-1835212979{margin-bottom:16px;}.buttons.jsx-1835212979{margin-right:134px;margin-left:134px;margin-bottom:24px;}div.kiwi-account.jsx-1835212979{margin-top:8px;text-align:center;}img.chevron.jsx-1835212979{width:8px;height:8px;margin-left:5px;object-fit:contain;}@media only screen and (min-width:320px) and (max-width:480px){.SignIn.jsx-1835212979{width:100%;padding-top:0px;}div.picture.jsx-1835212979{text-align:center;margin:75px 0px 20px 0px;}div.text.jsx-1835212979{margin:0px 16px 33px 16px;}.buttons.jsx-1835212979{display:table;margin:0 auto;}}"
    styleId="1835212979"
  />
</ScrollableContent>
`;
